--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p class="score" id="score--0">43</p>
         <div class="current">
           <p class="current-label">Current</p>
-          <p class="current-score" id="current--0">0</p>
+          <p class="current-score" id="current--0">50</p>
         </div>
       </section>
       <section class="player player--1">
@@ -29,7 +29,9 @@
       <img src="dice-5.png" alt="Playing dice" class="dice" />
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
-      <button class="btn btn--hold">📥 Hold</button>
+      <button class="btn btn--hold" onclick="HoldCurrentStored(0)">
+        📥 Hold
+      </button>
     </main>
     <script src="script.js"></script>
   </body>
