--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         </div>
       </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dice" />
-      <button class="btn btn--new" onclick="Restart()">🔄 New game</button>
-      <button class="btn btn--roll">🎲 Roll dice</button>
+      <img src="dice-1.png" alt="Playing dice" class="dice" id="dice-img" />
+      <button class="btn btn--new" onclick="restart()">🔄 New game</button>
+      <button class="btn btn--roll" onclick="randomNumber()">
+        🎲 Roll dice
+      </button>
       <button class="btn btn--hold">📥 Hold</button>
     </main>
     <script src="script.js"></script>
