--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Pig Game</title>
   </head>
   <body>
+    <section class="player--0 progressbar">
+      <div class="progress" id="progress-bar-0"></div>
+    </section>
     <main>
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
@@ -35,8 +38,10 @@
       <button class="btn btn--hold" onclick="HoldCurrentStored()">
         📥 Hold
       </button>
-      \
     </main>
+    <section class="player--1 progressbar">
+      <div class="progress" id="progress-bar-1"></div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
