fix:- corrected some errors related to coloring

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Pig Game</title>
   </head>
   <body>
-    <section class="player--0 progressbar">
+    <!-- <section class="player--0 progressbar">
       <div class="progress" id="progress-bar-0"></div>
-    </section>
+    </section> -->
     <main>
       <section class="player player--0 player--active">
         <h2 class="name" id="name--0">Player 1</h2>
@@ -39,9 +39,9 @@
         📥 Hold
       </button>
     </main>
-    <section class="player--1 progressbar">
+    <!-- <section class="player--1 progressbar">
       <div class="progress" id="progress-bar-1"></div>
-    </section>
+    </section> -->
     <script src="script.js"></script>
   </body>
 </html>
