--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </section> -->
     <main>
       <section class="player player--0 player--active">
+        <h1 id="winnerAnnouncement0"> </h1>
         <h2 class="name" id="name--0">Player 1</h2>
         <p class="score" id="score--0">0</p>
         <div class="current">
@@ -21,6 +22,7 @@
         </div>
       </section>
       <section class="player player--1">
+        <h1 id="winnerAnnouncement1"> </h1>
         <h2 class="name" id="name--1">Player 2</h2>
         <p class="score" id="score--1">0</p>
         <div class="current">
