fix:added progress bar

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Pig Game</title>
   </head>
   <body>
-    <!-- <section class="player--0 progressbar">
+    <div class="player-0 progressbar">
       <div class="progress" id="progress-bar-0"></div>
-    </section> -->
+    </div>
     <main>
       <section class="player player--0 player--active">
-        <h1 id="winnerAnnouncement0"> </h1>
+        <h1 id="winnerAnnouncement0"></h1>
         <h2 class="name" id="name--0">Player 1</h2>
         <p class="score" id="score--0">0</p>
         <div class="current">
@@ -22,7 +22,7 @@
         </div>
       </section>
       <section class="player player--1">
-        <h1 id="winnerAnnouncement1"> </h1>
+        <h1 id="winnerAnnouncement1"></h1>
         <h2 class="name" id="name--1">Player 2</h2>
         <p class="score" id="score--1">0</p>
         <div class="current">
@@ -41,9 +41,9 @@
         📥 Hold
       </button>
     </main>
-    <!-- <section class="player--1 progressbar">
+    <div class="player-1 progressbar">
       <div class="progress" id="progress-bar-1"></div>
-    </section> -->
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
